arreglo de altura, bugs con el font color

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h1>faq</h1> 
         <div class="container__acordion__items">
             <div class="container__acordion__items__questions">
-              <a href="#" class="container__acordion__items__questions__titleButton title">
+              <a class="container__acordion__items__questions__titleButton title">
                 How many team members can I invite?
                 <div class="arrow"></div>
             </a>          
@@ -110,11 +110,5 @@
   integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
   crossorigin="anonymous"></script>
   <script src="js/code.js"></script>
-  <!-- <script>
-    $( document ).ready(function() {
-      acordion();
-    });
- 
-    </script> -->
 </body>
 </html>
